better scrollbars ig, also there are slight gaps with my previous fix

--- a/editor/editor.css
+++ b/editor/editor.css
@@ -4,18 +4,15 @@
     padding-left: 0em;
     height: 100%;
     width: 100%;
-    overflow: scroll;
+    overflow: auto;
 }
-
-
-
-
 
 
 
 
 .editor::-webkit-scrollbar {
     width: 12px;
+    height: 12px;
     visibility: hidden;
     background-color: transparent;
     border: solid rgba(255, 255, 255, 0.334) 1pt;
@@ -23,43 +20,27 @@
 }
   
 
-
-
-
-
 .editor::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: hsla(0, 0%, 100%, 0.1);
     border-radius: 2pt;
-    -webkit-box-shadow: none;
-    
 }   
 
 
-
-
-.editor::-webkit-scrollbar-thumb:hover {
-    transition: background-image 1s ease;
-    background: linear-gradient(to bottom, rgba(253, 97, 7, 0.549), rgba(252, 12, 220, 0.39));
+.editor::-webkit-scrollbar-thumb:hover , .editor-scrolling {
+    background-image: linear-gradient(to bottom, hsla(22, 98%, 51%, 0.7), hsla(308, 98%, 51%, 0.7));
+    box-shadow: 0 0 15px inset rgba(255,255,255,0.9);
 }
 
-.editor::-webkit-scrollbar-thumb:horizontal:hover {
-    transition: background-image 1s ease;
-    background: linear-gradient(to right, rgba(253, 97, 7, 0.549), rgba(252, 12, 220, 0.39));
+.editor::-webkit-scrollbar-thumb:horizontal:hover, .editor-scrolling {
+    background-image: linear-gradient(to right, hsla(22, 98%, 51%, 0.7), hsla(308, 98%, 51%, 0.7));
+    box-shadow: 0 0 15px inset rgba(255,255,255,0.9);
 }
 
 
-.editor::-webkit-scrollbar:horizontal{
-    height: 12px;   
-}
 
 .editor::-webkit-scrollbar-corner {
     display: none;
 }
-
-
-  
-
-
 
 
 
@@ -71,8 +52,3 @@
 }
 
 
-#win2{
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-}
